# aumos-integration-tests

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  docker-compose.integration.yml  pyproject.toml
.github/workflows/: integration.yml
fixtures/keycloak/: realm-export.json
fixtures/sample_data/: tabular_sample.csv  text_sample.json
scripts/: seed-test-data.sh  wait-for-services.sh
src/seeding/: __init__.py  fixtures.py  seed.py
tests/: conftest.py
tests/chaos/: __init__.py  test_kafka_partition.py  test_postgres_timeout.py  test_redis_unavailable.py
tests/contracts/: __init__.py  test_auth_gateway_consumer.py  test_llm_serving_consumer.py  test_model_registry_consumer.py  test_privacy_engine_consumer.py
tests/database/: __init__.py  test_migrations.py  test_repository_pattern.py  test_rls_policies.py
tests/performance/: __init__.py  test_auth_latency.py  test_db_query_latency.py  test_kafka_throughput.py
tests/phase0/: test_auth_flow.py  test_error_propagation.py  test_event_propagation.py  test_rls_enforcement.py  test_tenant_isolation.py
tests/phase1/: test_data_factory_e2e.py  test_synthesis_pipeline.py
tests/phase2/: test_governance_flow.py  test_governance_pipeline.py  test_observability_pipeline.py  test_security_pipeline.py
tests/smoke/: test_health_endpoints.py
